# django-social-network-app

./: .gitignore  README.md  manage.py  package-lock.json  pyproject.toml  requirements.txt
home/: views.py
pyblogit/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
